--- a/.env
+++ b/.env
@@ -1,1 +1,7 @@
+FLASK_DEBUG=true
+FLASK_APP=app.py
+SQLALCHEMY_DATABASE_URI=sqlite:///swifttaxdb.sqlite3
+SQLALCHEMY_TRACK_MODIFICATIONS=False
+SECRET_KEY=<yashwanth123>
+
 GEMINI_API_KEY=AIzaSyBPIluo0P8oUrWj2yQSCR6ix-sLZ_ZbADE
